<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#f2f5df"
                android:textSize="40dp"
                android:text="Physical Training"
                android:gravity="center" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/agility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/wormup"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button

                        android:id="@+id/speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/speed"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />


                    <Button

                        android:id="@+id/streight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/streight"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />

                    <Button

                        android:id="@+id/conditioning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#9acd32"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/conditioning"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />

                    <Button

                        android:id="@+id/injury"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/injury"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />

                    <Button

                        android:id="@+id/plyometrics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:layout_marginTop="40dp"
                        android:text="@string/plyometrics"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />

                    <Button

                        android:id="@+id/flexibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/flexibility"
                        android:textColor="#f2f5df"
                        android:layout_marginTop="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />


                    <Button

                        android:id="@+id/summer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/summer"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />


                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>











