<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#f2f5df"
                android:textSize="40dp"
                android:text="Shooting"
                android:gravity="center"/>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button

                        android:id="@+id/JumpShot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/JumpShot"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button

                        android:id="@+id/fadeaway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/fadeaway"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />



                    <Button

                        android:id="@+id/hook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/hook"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />

                    <Button

                        android:id="@+id/pivot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/pivot"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-16dp" />


                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>









