<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#f2f5df"
                        android:textSize="40dp"
                        android:text="BASKETBALL TRAINER"
                        android:gravity="center" />


                    <Button

                        android:id="@+id/buttom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/physical_training"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <Button

                        android:id="@+id/passing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/passing"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <Button

                        android:id="@+id/dribbling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/dribbling"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <Button

                        android:id="@+id/shooting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="#9acd32"
                        android:gravity="center"
                        android:text="@string/shooting"
                        android:textColor="#f2f5df"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />





                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>